--- a/code source/src/app/landingpage/landingpage.component.html
+++ b/code source/src/app/landingpage/landingpage.component.html
@@ -1,1 +1,48 @@
-<p>landingpage works!</p>
+
+<body style="background-image: url('../../assets/bg_land.png');height: 100vh;background-repeat: no-repeat; 
+background-position: center;
+background-size: cover; position: relative">
+
+
+<div class="container-fluid">
+
+    <div class="row d-flex align-items-center">
+        <div id="t" class="col-sm-4 col-md-4 text-center">
+            <h1>Start-Match</h1>
+            <h6>Start your enterneurship journey</h6>
+        </div>
+        <div class="col-md-4 text-center" id="nav" >
+            <br/> <app-navbar></app-navbar>
+        </div></div>
+       <div class="col-md-4 text-center" id="nav" >
+
+        
+            <button type="button" class="btn btn1" id="button1" routeLink=''>
+      
+      Sign UP
+    </button>
+    <button type="button" class="btn btn2" id="button2" routeLink=''>login</button>
+  
+  </div>
+
+
+
+
+
+    <div class="bg-image" style="height: 100vh;">
+        <div class="row">
+            <div class="col-lg-6 col-sm-12 image-container text-right">
+                <img src="../../assets/rajel.png" class="corner-image">
+            
+            <div class="col-lg-6 col-sm-12" style="position: absolute;margin-top: 150px;">
+                <h1 style="font-size: 50px; color: #3986b5; ">Search, Find, Invest And Collaborate</h1><br/><br/>
+                <p style="color: #3986b5; font-size: 20px;">In this platform we are up to facilitate the communication between Investors, Startups, and Founders.</p>
+   
+                <button id="myButt" class="btn" style="background-color:#8CBDB9; margin-top: 50px; margin-left: 160px;"><p style="color: beige;">Learn More</p></button>
+            </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+</body>
