--- a/code source/src/app/post-aff/post-aff.component.html
+++ b/code source/src/app/post-aff/post-aff.component.html
@@ -6,7 +6,7 @@
                 <div class="col-12 enligne">
                 <img  routerLink="" class="img-fluid eclipse"  src="https://hackspirit.com/wp-content/uploads/2021/06/Copy-of-Rustic-Female-Teen-Magazine-Cover.jpg" alt="person/startup_img">
                 <p>
-                    <span routerLink="" class="name">Najla l fatena</span>
+                    <span routerLink="" class="name">Najla BenAhmed</span>
                      <br>
                     <span class="person-description">Computer science student <br>
                     <span class="person-description"> 25 Nov 2023 at 23:00</span>
