--- a/code source/src/app/post-reported/post-reported.component.html
+++ b/code source/src/app/post-reported/post-reported.component.html
@@ -20,8 +20,8 @@
         </div>
 
         <div class="flexy-2">
-                <button type="button" class="btn btn-success">like</button>
-                <button type="button"  class="btn btn-danger">report</button>
+               
+                <button type="button"  class="btn btn-danger" >Delete</button>
         </div>
          
        
