--- a/code source/src/app/profil/profil.component.html
+++ b/code source/src/app/profil/profil.component.html
@@ -19,6 +19,10 @@
                 computer science engineer
                 istic 22-25 ssssssssss ssssssss ssss ssssssssssssss s
             </p>
+            <app-button-manage></app-button-manage>
         </div>
     </div>
+    
+          
+        
 </div>
