--- a/code source/src/app/create-post/create-post.component.html
+++ b/code source/src/app/create-post/create-post.component.html
@@ -3,7 +3,7 @@
     <div class="create-post-container">
         <div class="user">
         <div class="user-profile">
-            <a href=""><img src="../../assets/1700506697307.jpg" alt="user-pdp"></a>
+            <a routerLink="/profile" routerLinkActive="active"><img src="../../assets/347245498_3570899629797993_7265237523852668848_n.jpg" alt="user-pdp"></a>
         </div>
         <div class="post-input-container">
             <textarea id="inputText" rows="3"  cols="43" placeholder="What's on your mind" required></textarea>
@@ -46,7 +46,9 @@
             </ul>
                
         </div>
-        <button type="submit" id="btnPost" class="btn btn-primary" style="margin-left: 27%;">Post</button>
+        <button type="submit" id="btnPost" class="btn btn-primary btt" >Post</button>
     </div>
-</div></form></div>
+</div> 
+
+</form></div>
 
