--- a/code source/src/app/newsfeed/newsfeed.component.html
+++ b/code source/src/app/newsfeed/newsfeed.component.html
@@ -1,32 +1,26 @@
 <body>
-<div class="container-fluid">
-<app-headernews></app-headernews>
-<br>
-<app-newsfilter></app-newsfilter>
-<br>
-<div class="row">
-<<<<<<< HEAD
-    <div class="col-3">
-        <app-suggested></app-suggested>
-    </div>
-    <div class="col-6">
-        <app-beta></app-beta>
-    </div>
-
-</div>
+    <div class="container-fluid">
+    <app-headernews></app-headernews>
+    <br>
+    <app-newsfilter></app-newsfilter>
+    <br>
+    <div class="row">
+        <div class="col-3" style="margin-bottom: 20px;">
+            <app-suggested></app-suggested>
+        </div>
+        <div class="col-lg-5 ">
+            <div class="row">
+                <app-create-post></app-create-post><br/>
+            </div>
+    
+    <div class="row mt-5">
+            <app-beta></app-beta></div>
+        </div>
+    
+    </div></div>
+</body>
 <!--
 <br>
 <app-searchfilter></app-searchfilter>
 </div>
 -->
-=======
-    <div class="col-sm-12 col-lg-3"><br/>
-    <app-suggested></app-suggested></div>
-    <div class="col-sm-12 col-lg-5">
-       <br/> <app-create-post></app-create-post></div>
-    
-</div>
-
-</div>
-</body>
->>>>>>> d75b8a3bac95292246667f5983ea1dbe95af30bd
