--- a/code source/src/app/form-person/form-person.component.css
+++ b/code source/src/app/form-person/form-person.component.css
@@ -1,5 +1,5 @@
 .container{
-    margin-top: 160px;
+    margin-top: 60px;
 }
 body {
     background-image: url("../../assets/bg4.jpg");
@@ -19,8 +19,8 @@ span {
 }
 
 a {
-    color: inherit; 
-    text-decoration: underline;
+    color:white;
+    text-decoration: none;
 }
 
 a:hover {
