--- a/code source/src/app/profil/profil.component.css
+++ b/code source/src/app/profil/profil.component.css
@@ -10,7 +10,7 @@ body{
         padding-top:160px;
     }
     #d2{
-        background-image: url("../../assets/téléchargement.jpg");
+        background-image: url("https://cdn.due.com/blog/wp-content/uploads/2016/08/Attract-People-to-Join-your-Startup.jpg");
         background-repeat: no-repeat;
         background-size:cover;
         height: 200px;
