--- a/code source/src/app/form-person/form-person.component.html
+++ b/code source/src/app/form-person/form-person.component.html
@@ -103,7 +103,7 @@
             </div>
         </div>
 
-        <button type="click" id="done" class="btn btn-link" ><a routerLink='/newsfeed'>Done</a></button>
+        <button type="click" id="done" class="btn" ><a routerLink='/newsfeed'>Done</a></button>
     </div>
 
     </form>
