--- a/code source/src/app/form-startup/form-startup.component.css
+++ b/code source/src/app/form-startup/form-startup.component.css
@@ -20,8 +20,8 @@ span {
 }
 
 a {
-    color: inherit; 
-    text-decoration: underline;
+    color: white; 
+    text-decoration: none;
 }
 
 a:hover {
