--- a/code source/src/app/form-startup/form-startup.component.html
+++ b/code source/src/app/form-startup/form-startup.component.html
@@ -67,7 +67,7 @@
                 </div>
         
                 
-                <button type="click" id="done" class="btn btn-link" routerLink='/newsfeed'>Done</button>
+                <button type="click" id="done" class="btn" ><a routerLink='/newsfeed'>Done</a></button>
             
             </div>
         </form>
