--- a/code source/src/app/navbarnews/navbarnews.component.html
+++ b/code source/src/app/navbarnews/navbarnews.component.html
@@ -10,7 +10,7 @@
             </svg>
             home</a>
           </button>
-          <button type="button" class="btn btn2" id="button2" href="about us">About Us</button>
+          <a routerLink='/aboutus'><button type="button" class="btn btn2" id="button2" href="about us">About Us</button></a>
           <button type="button" class="btn btn2" id="button3" href="contact us">Contact Us</button>
         <form class="ms-3">
           <div class="input-group">
