--- a/code source/src/app/headerlanding/headerlanding.component.html
+++ b/code source/src/app/headerlanding/headerlanding.component.html
@@ -15,13 +15,16 @@
                         </svg>
                         home
                       </button></a>
-                      <button type="button" class="btn btn2" id="button2" href="about us">About Us</button>
+                      <a routerLink='/aboutus'><button type="button" class="btn btn2" id="button2" href="about us">About Us</button></a>
                       <button type="button" class="btn btn3" id="button3" href="contact us">Contact Us</button>
                     </div>
                     
                 </div>
                 </div>
         </div>
-        
+        <div class="col-md-3">
+                     <a routerLink='/login'> <button type="button" class="btn btn1" id="button2">Login</button></a>
+                     <a routerLink='/signin'> <button type="button" class="btn btn3" id="button3">Sign in</button></a>
+        </div>
     </div>
 </div>
