Signed-off-by: heithemb <heithem.benmoussa.71@gmail.com>

--- a/code source/src/app/button-manage/button-manage.component.html
+++ b/code source/src/app/button-manage/button-manage.component.html
@@ -1,7 +1,7 @@
 <div class="btn-group">
     <button id="manage" style="background-color: rgb(184, 0, 0); color: antiquewhite; " class="btn btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">manage    </button>
     <ul class="dropdown-menu">
-        <li><button id="update" type="button" class="btn  dropdown-item" style="background-color: rgb(218, 249, 217);">Update</button></li>
+        <li><button id="update" type="button" class="btn  dropdown-item" style="background-color: rgb(218, 249, 217);"><a routerLink='/updateprofile'>Update</a></button></li>
         <li><button id="delete" type="button" class="btn  dropdown-item" style="background-color: rgb(255, 236, 236);">Delete</button></li>
     </ul>
        
