--- a/code source/src/app/headerlanding2/headerlanding2.component.css
+++ b/code source/src/app/headerlanding2/headerlanding2.component.css
@@ -14,10 +14,10 @@ body{
 h1{
     font-weight: bold;
     font-family:fantasy;
-    color:#E3E7FF;
+    color:#3A5587;
 }
 h6{
-    color:#E3E7FF;
+    color:#3A5587;
 }
 h3{
     color:#E3E7FF;
