--- a/code source/src/app/landingpage/landingpage.component.html
+++ b/code source/src/app/landingpage/landingpage.component.html
@@ -49,7 +49,7 @@ background-size: cover; position: relative">
 
 <div class="bg-image" 
      style="background-image: url('../../assets/bg_land.png');height: 100vh">
-     <app-headerlanding></app-headerlanding>
+     <app-headerlanding2></app-headerlanding2>
      <br>
      <div class="row">
         <div class="col">
