--- a/code source/src/app/headerlanding/headerlanding.component.html
+++ b/code source/src/app/headerlanding/headerlanding.component.html
@@ -16,7 +16,7 @@
                         home
                       </button></a>
                       <a routerLink='/aboutus'><button type="button" class="btn btn2" id="button2" href="about us">About Us</button></a>
-                      <button type="button" class="btn btn3" id="button3" href="contact us">Contact Us</button>
+                      <a routerLink='/contactus'> <button type="button" class="btn btn3" id="button3" href="contact us">Contact Us</button></a>
                     </div>
                     
                 </div>
