--- a/code source/src/app/landingpage/landingpage.component.css
+++ b/code source/src/app/landingpage/landingpage.component.css
@@ -1,8 +1,8 @@
-/*  #home-page {
+/*  #home-page {
     width: 100%;
     height: 100%;
 }
-#home-page-landing {
+#home-page-landing {
         width: 100%;
         height: 100%;
         background-image: url("../../assets/bg_land.png");
@@ -27,16 +27,26 @@
         padding-left: 0;
     }
 }  
+*/
 
-#t{
-    h1{
-        font-weight: bold;
-        font-family:fantasy;
-        color:#06487C;
+h1{
+    font-weight: bold;
+    font-family:fantasy;
+    color:#06487C;
+}
+h6{
+    color:#06497cb6;
+}
+/*
+.fade-out-left {
+    animation: fadeOutLeft 1s ease forwards;
+  }
+  
+  @keyframes fadeOutLeft {
+    0% {
+      opacity: 1;
     }
-    h6{
-        color:#06497cb6;
+    100% {
+      opacity: 0;
     }
-
-} */
- 
+  } */
