--- a/code source/src/app/navbar/navbar.component.html
+++ b/code source/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
             home
           </button></a>
           <a routerLink='/aboutus'><button type="button" class="btn btn2" id="button2" routerLink='/about-us'>About Us</button></a> 
-          <button type="button" class="btn btn3" id="button3" href="contact us">Contact Us</button>
+          <a routerLink='/contactus2'><button type="button" class="btn btn3" id="button3" href="contact us">Contact Us</button></a>
         </div>
         
     </div>
