--- a/code source/src/app/navbarnews/navbarnews.component.html
+++ b/code source/src/app/navbarnews/navbarnews.component.html
@@ -11,7 +11,7 @@
             home</a>
           </button>
           <a routerLink='/aboutus'><button type="button" class="btn btn2" id="button2" href="about us">About Us</button></a>
-          <button type="button" class="btn btn2" id="button3" href="contact us">Contact Us</button>
+          <a routerLink='/contactus2'><button type="button" class="btn btn2" id="button3" href="contact us">Contact Us</button></a>
         <form class="ms-3" >
           <div class="input-group">
             <span class="input-group-text">
