--- a/code source/src/app/update-profile/update-profile.component.html
+++ b/code source/src/app/update-profile/update-profile.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <body>
     <div class="container">
     
@@ -59,7 +60,7 @@
             </div>
         </form>
             </div>
-    
+            <app-footer></app-footer>
             
         
         
