--- a/code source/src/app/footer/footer.component.html
+++ b/code source/src/app/footer/footer.component.html
@@ -1,13 +1,12 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-
 <div class="footer-basic" >
     <footer>
         <div class="social"><a href=""><i class="icon ion-social-instagram"></i></a><a href=""><i class="icon ion-social-twitter"></i></a><a href=""><i class="icon ion-social-facebook"></i></a></div>
         <ul class="list-inline">
             <li class="list-inline-item"><a  routerLink='/landingpage'>Home</a></li>
-            <li class="list-inline-item"><a  routerLink=''>Contact us</a></li>
-            <li class="list-inline-item"><a  routerLink=''>About Us</a></li>
-            <li class="list-inline-item"><a  routerLink=''>Privacy Policy</a></li>
+            <li class="list-inline-item"><a  routerLink='/contactus'>Contact us</a></li>
+            <li class="list-inline-item"><a  routerLink='/aboutus'>About Us</a></li>
+            <li class="list-inline-item"><a  routerLink='/privacy'>Privacy Policy</a></li>
         </ul>
         <p class="copyright">StartMatch Â© 2024</p>
     </footer>
