--- a/code source/src/app/adminfirstpannel/adminfirstpannel.component.html
+++ b/code source/src/app/adminfirstpannel/adminfirstpannel.component.html
@@ -1,6 +1,6 @@
 <body>
     <div class="container-fluid">
-    <app-headernews></app-headernews>
+    <app-headeradmin></app-headeradmin>
     <br>
     <div class="row">
         <div class="col-4" style="margin-bottom: 20px;">
