--- a/code source/src/app/about-us/about-us.component.html
+++ b/code source/src/app/about-us/about-us.component.html
@@ -1,12 +1,79 @@
-<div class="container">
-    <div class="row">
-        <div class="col-6 offset-3">
-            <p class="font">About Us</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <p>StartMatch, aims to create a dedicated and comprehensive platform specifically designed for the needs of entrepreneurs, founders, co-founders start-ups and investors.It provides a user-friendly platform where users can connect, collaborate, and grow together.</p>
-        </div>
-    </div>
+
+<body>
+    <div class="container-fluid">
+    <app-header></app-header>
 </div>
+
+    <br><br>
+<section class="py-3 py-md-5">
+    <div class="container">
+      <div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
+        <div class="col-12 col-lg-6 col-xl-5">
+          <img class="img-fluid rounded" loading="lazy" src="../../assets/rajel.png" alt="About 1">
+        </div>
+        <div class="col-12 col-lg-6 col-xl-7">
+          <div class="row justify-content-xl-center">
+            <div class="col-12 col-xl-11">
+              <h2 class="mb-3">Who Are We?</h2>
+              <p class="lead fs-4 text-secondary mb-3">Our project consists of building StartMatch , a plateform dedicated to all actors in
+                enterpreneurship, that can do the match-making between founder,co-founder or founderinvestor or investor-startup.</p>
+              <p class="mb-5">We aim to create a dedicated and comprehensive platform
+                specifically designed for the needs of entrepreneurs, founders, co-founders start-ups
+                and investors.It provides a user-friendly platform where users can connect, collaborate,
+                and grow together.</p>
+              
+            </div>
+          </div>
+        </div>
+      </div>
+      <br> <br>
+      <h1 class="text-center">Meet Start-Match Team</h1>
+      <br>
+        <div class="row">
+            <div class="col">
+              <div class="card h-100">
+                <div class="card-body">
+                    <img src="../../assets/1700506697307.jpg" class=" image card-img-top mx-auto d-block" alt="...">
+
+                  <h5 class="card-title text-center">Mezni Noor</h5>
+                  <h6 class="card-subtitle text-center">Software Engineering Studen</h6>
+                  <p class="card-text text-center">Highly interested in business foundation and expert in computer science</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <div class="card-body">
+                    <img src="../../assets/347245498_3570899629797993_7265237523852668848_n.jpg" class=" image card-img-top mx-auto d-block" alt="...">
+
+                  <h5 class="card-title text-center">Benmossa Heithem</h5>
+                  <h6 class="card-subtitle text-center">Software Engineering Studen</h6>
+                  <p class="card-text text-center">Highly interested in business foundation and expert in computer science</p>
+                </div>
+             </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="../../assets/433987347_296998546624436_5529945561536646189_n.jpg" class=" image card-img-top mx-auto d-block" width="655" height="296" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title text-center">Dridi Mohamed Neji</h5>
+                  <h6 class="card-subtitle text-center">Software Engineering Studen</h6>
+                  <p class="card-text text-center">Highly interested in business foundation and expert in computer science</p>
+                </div>
+             </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                  <div class="card-body">
+                    <img src="../../assets/369736547_2617132981774773_7144331000088560904_n.jpg" class=" image card-img-top mx-auto d-block" alt="...">
+                    <h5 class="card-title text-center">Guerrich Oussema</h5>
+                    <h6 class="card-subtitle text-center">Software Engineering Studen</h6>
+                    <p class="card-text text-center">Highly interested in business foundation and expert in computer science</p>
+                  </div>
+    
+                </div>
+              </div>
+          </div>
+      </div>
+  </section>
+</body>
