--- a/code source/src/app/headernews/headernews.component.html
+++ b/code source/src/app/headernews/headernews.component.html
@@ -2,8 +2,8 @@
 <div class="container-fluid py-3" id="d1">
     <div class="row d-flex align-items-center ">
         <div class="col-sm-3 col-md-4 text-center">
-            <h1>Start-Match</h1>
-            <h6>Start your enterneurship journey</h6>
+            <a routerLink='/newsfeed'><h1>Start-Match</h1></a>
+           <a routerLink='/newsfeed'> <h6>Start your enterneurship journey</h6></a>
         </div>
         <div class="col-md-5 text-center">
             <app-navbarnews></app-navbarnews>
