--- a/code source/src/app/aboutus2/aboutus2.component.html
+++ b/code source/src/app/aboutus2/aboutus2.component.html
@@ -1,7 +1,7 @@
 
 <body>
     <div class="container-fluid">
-      <app-headernews></app-headernews>
+      <app-headerlanding2></app-headerlanding2>
     </div>
 
     <br><br>
