--- a/code source/src/app/footer/footer.component.html
+++ b/code source/src/app/footer/footer.component.html
@@ -8,6 +8,6 @@
             <li class="list-inline-item"><a  routerLink='/aboutus'>About Us</a></li>
             <li class="list-inline-item"><a  routerLink='/privacy'>Privacy Policy</a></li>
         </ul>
-        <p class="copyright">StartMatch Â© 2024</p>
+        <p class="copyright" style="color: rgba(0, 0, 0, 0.616);">StartMatch © 2024</p>
     </footer>
 </div>
