--- a/code source/src/app/headerlanding2/headerlanding2.component.html
+++ b/code source/src/app/headerlanding2/headerlanding2.component.html
@@ -15,7 +15,7 @@
                         </svg>
                         home
                       </button></a>
-                      <a routerLink='/aboutus'><button type="button" class="btn btn2" id="button2" href="about us">About Us</button></a>
+                      <a routerLink='/aboutus2'><button type="button" class="btn btn2" id="button2" >About Us</button></a>
                       <a routerLink='/contactus'> <button type="button" class="btn btn3" id="button3" href="contact us">Contact Us</button></a>
                     </div>
                     
