--- a/code source/src/app/login-form/login-form.component.html
+++ b/code source/src/app/login-form/login-form.component.html
@@ -1,7 +1,7 @@
 <app-headerlanding></app-headerlanding>
 <body>
     <div class="container">
-
+    <div class="row">
     <div class="col offset-2">
         <p id="text1">Login with StartMatch</p></div>
         <form class="was-validated">
@@ -28,7 +28,9 @@
                 </div>
 
                 
-                </form> </div>
+                </form>
+             </div>
+            </div>
 
 
 
