--- a/code source/src/app/header/header.component.html
+++ b/code source/src/app/header/header.component.html
@@ -9,7 +9,7 @@
             <app-navbar></app-navbar>
         </div>
         <div class="col-md-2 align-items text-center" id="profile-name">
-            <a routerLink='/profile'><h6 >Benmoussa Heithem</h6></a>
+            <a routerLink='/profile'><h6 >{{ user.pfirst_name }} {{ user.plast_name }}</h6></a>
         </div>
         <div class="col-md-1   text-center ">
             <a routerLink='/profile'>
