--- a/code source/src/app/headernews/headernews.component.html
+++ b/code source/src/app/headernews/headernews.component.html
@@ -9,7 +9,7 @@
             <app-navbarnews></app-navbarnews>
         </div>
         <div class="col-md-2 text-center" id="profile-name" >
-            <a routerLink='/profile'  ><h6 >Benmoussa Heithem</h6></a>
+            <a routerLink='/profile'  ><h6 >{{ user.pfirst_name }} {{ user.plast_name }}</h6></a>
         </div>
         <div class="col-md-1 text-center">
             <a routerLink='/profile'><img src="../../assets/347245498_3570899629797993_7265237523852668848_n.jpg" height="75" width="81" id="pdp" class="rounded-circle" ></a>
