--- a/code source/src/app/header/header.component.html
+++ b/code source/src/app/header/header.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="col-md-1   text-center ">
             <a routerLink='/profile'>
-                <img src="../../assets/347245498_3570899629797993_7265237523852668848_n.jpg" height="75" width="81" id="pdp" class="rounded-circle" >
+                <img src="data:image/jpeg;base64,{{user.ppic}}" height="75" width="81" id="pdp" class="rounded-circle" >
             </a>
         </div>
     </div>
