--- a/code source/src/app/headernews/headernews.component.html
+++ b/code source/src/app/headernews/headernews.component.html
@@ -12,7 +12,7 @@
             <a routerLink='/profile'  ><h6 >{{ user.pfirst_name }} {{ user.plast_name }}</h6></a>
         </div>
         <div class="col-md-1 text-center">
-            <a routerLink='/profile'><img src="../../assets/347245498_3570899629797993_7265237523852668848_n.jpg" height="75" width="81" id="pdp" class="rounded-circle" ></a>
+            <a routerLink='/profile'><img src="data:image/jpeg;base64,{{user.ppic}}" height="75" width="81" id="pdp" class="rounded-circle" ></a>
         </div>
     </div>
 </div>
